# components

./: .gitignore  CMakeLists.txt  README.md  strutils.hpp  versions.txt
cmake/: GLFWSetup.cmake  GoogleTestExec.cmake  GoogleTestSetup.cmake  OptionPrinter.cmake  VersionExtract.cmake  gtest_setup.cmake
common/: config.hpp.in
gtest/: ParserTest.cpp
math/: Arithmetic.hpp
resources/: CMakeLists.txt  Manager.hpp
string/: CMakeLists.txt  Logging.hpp  Parser.cpp  Parser.hpp  ParserElem.cpp  ParserElem.hpp  strutils.cpp  strutils.hpp
string/gtest/: CMakeLists.txt  ParserTest.cpp  fake_template.gsf  template.gsf
timing/: CMakeLists.txt  Clock.cpp  Clock.hpp  Event.cpp  Event.hpp
timing/gtest/: CMakeLists.txt  ClockTest.cpp  EventTest.cpp
